2015-07-17  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.1+beta2.

2015-07-17  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 5.1+beta1 release.

	* CHANGES: Updated.

	* INSTALL: Note that Debian Jessie is now the reference system.

2015-07-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginlaunch.c (pluginlaunch_init): Add hostname argument.
	(update_running_processes): Correctly set hostname in plugin timeout
	error message.

	* src/pluginlauch.h: Modify function prototype.

	* src/attack.c (attack_host): Adjust function call.

2015-07-10  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/comm.c, src/log.c, src/nasl_plugins.c: Fix documentation issues
	found with Doxygen.

2015-07-10  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/Doxyfile.in, doc/Doxyfile_full.in: Harmonized settings with
	Doxygen configurations of other OpenVAS modules.

2015-07-10  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/Doxyfile.in, doc/Doxyfile_full.in: Updated Doxygen configuration
	files with Doxygen 1.8.8.

2015-07-08  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/processes.c (init_child_signal_handlers): Ignore SIGPIPE instead
	of terminating process.

2015-06-25  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginscheduler.c (hash_add): Remove nvti parameter.
	(plugins_scheduler_fill): Don't get the full nvti. Get category from
	nvticache.

2015-06-18  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (send_plug_info, comm_send_pluginlist),
	src/pluginscheduler.c (plugins_scheduler_fill): Adjust to use
	nvticache_get_names() and nvticache_get_by_name_full() in order to
	reduce number of KB queries.

2015-06-17  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/hosts.c (hosts_new): Check if scan is stopped.
	(hosts_stop_all): Set global_scan_stop for this process too.
