@@ -1,5 +1,11 @@
 2015-07-17  Michael Wiegand <michael.wiegand@greenbone.net>
 
+	* CMakeLists.txt: Install openvas-mkcert-client to "bin" instead of
+	"sbin" to be FHS compliant. Ensure man page for openvas-mkcert-client
+	is installed. Based on patch provided by Michal Ambroz.
+
+2015-07-17  Michael Wiegand <michael.wiegand@greenbone.net>
+
 	Post release version bump.
 
 	* CMakeLists.txt: Set version to 5.1+beta2.
